# Trident-Engine-2024

./: Cargo.toml
src/: application.rs  engine_types.rs  gl_loading.rs  macros.rs  main.rs  opengl_utils.rs  shader_management.rs
src/shaders/: main_fragment.glsl  main_vertex.glsl
trident_workspace/: Cargo.toml
trident_workspace/client/: Cargo.toml
trident_workspace/client/src/: lib.rs
trident_workspace/trident-engine-2024/: Cargo.toml
trident_workspace/trident-engine-2024/shaders/: main_fragment.glsl  main_vertex.glsl
trident_workspace/trident-engine-2024/src/: application.rs  gl_loading.rs  lib.rs  macros.rs  main.rs  opengl_utils.rs  rendering.rs  shader_errors.rs  shader_management.rs  texture_management.rs
trident_workspace/trident-engine-2024/src/client/: mesh_management.rs  mod.rs
trident_workspace/trident-engine-2024/src/game/: mesh_management.rs  mod.rs
trident_workspace/trident-engine-2024/src/game/services/: input_actions.rs  mod.rs
