[package]
name = "trident-engine-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.37.0", features = ["image"] }
gl = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
nalgebra-glm = "0.19.0"
libloading = "0.8.6"
async-std = { version = "1.13.0", features = ["attributes"] }
async-trait = "0.1.83"
rfd = "0.15.1"